feat: storybook working

--- a/example/storybook/src/components/Actionsheet/index.stories.mdx
+++ b/example/storybook/src/components/Actionsheet/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Actionsheet" />
+<Meta title="components/Actionsheet" />
 
 # ActionSheet
 
@@ -35,5 +35,5 @@ const Actionsheet = ActionsheetMain(Root) as any;
 These are the components needed for Actionsheet to work. You have to pass the Root component to the ActionsheetMain function. The Root component is the component that will be rendered when the Actionsheet is opened. The Content component is the component that will be rendered inside the Root component. The Item component is the component that will be rendered inside the Content component. The ItemText component is the component that will be rendered inside the Item component. The DragIndicator component is the component that will be rendered inside the Root component. The Backdrop component is the component that will be rendered inside the Root component. The IndicatorWrapper component is the component that will be rendered inside the Root component.
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-actionsheet--actionsheet-story" />
+  <Story id="components-stories-actionsheet--actionsheet-story" />
 </Canvas>
