--- a/example/storybook/src/components/AlertDialog/index.stories.mdx
+++ b/example/storybook/src/components/AlertDialog/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/AlertDialog" />
+<Meta title="components/AlertDialog" />
 
 # AlertDialog
 
@@ -21,5 +21,5 @@ Overlays are used to handle the modal behavior of the dialog and ensure that it 
 Once you import and use the package, the component can be used in a similar way to the `Alert` component, with props such as `title`, `message`, `buttons`, `content` to customize the behavior and appearance of the dialog.
 
 <Canvas style={{ height: 500 }}>
-  <Story id="recipes-stories-alertdialog--alert-dialog-story" />
+  <Story id="components-stories-alertdialog--alert-dialog-story" />
 </Canvas>
