--- a/example/storybook/src/components/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/Avatar/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Avatar" />
+<Meta title="components/Avatar" />
 
 # Avatar
 
@@ -21,5 +21,5 @@ Once you import and use the package, the component can be used with props such a
 It's important to note that, the `Avatar` component can be used to display both image and text representation of the user or entity, and also the styling can be applied to match the overall style of the application.
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-avatar--avatar-story" />
+  <Story id="components-stories-avatar--avatar-story" />
 </Canvas>
