--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Button" />
+<Meta title="components/Button" />
 
 # Button
 
@@ -21,5 +21,5 @@ You can also style the button using the `style` prop, this prop accepts an objec
 It's important to note that the `Button` component is platform-specific, so it will look and behave differently on iOS and Android.
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-button--button-story" />
+  <Story id="components-stories-button--button-story" />
 </Canvas>
