--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Checkbox" />
+<Meta title="components/Checkbox" />
 
 # Checkbox
 
@@ -21,5 +21,5 @@ This can be easily imported and used in any React Native project while providing
 When using a third-party library, the component can be used with props such as `label`, `checked`, `onValueChange` to customize the behavior and appearance of the Checkbox. You can also style the checkbox using the `style` prop, this prop accepts an object containing the styles of the checkbox.
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-checkbox--checkbox-story" />
+  <Story id="components-stories-checkbox--checkbox-story" />
 </Canvas>
