--- a/example/storybook/src/components/IconButton/index.stories.mdx
+++ b/example/storybook/src/components/IconButton/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/IconButton" />
+<Meta title="components/IconButton" />
 
 # IconButton
 
@@ -15,5 +15,5 @@ Styled views are used to define the layout and visual design of the IconButton, 
 SVG (Scalable Vector Graphics) is a vector image format that can be used to create icons in React Native. SVG icons are resolution-independent, which means they will look crisp and clear on any screen size.
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-iconbutton--icon-button-story" />
+  <Story id="components-stories-iconbutton--icon-button-story" />
 </Canvas>
