--- a/example/storybook/src/components/Input/index.stories.mdx
+++ b/example/storybook/src/components/Input/index.stories.mdx
@@ -1,9 +1,9 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Input/Input" />
+<Meta title="components/Input" />
 
 # Input
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-input--input-story" />
+  <Story id="components-stories-input--input-story" />
 </Canvas>
