--- a/example/storybook/src/components/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Menu/index.stories.mdx
@@ -1,11 +1,11 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Menu" />
+<Meta title="components/Menu" />
 
 # Menu
 
 "Menu" component is used to create a menu of options that can be displayed on demand in React Native. In React Native, the Menu component can be generated using a third-party accessibility-focused library that uses "styled views", "Pressable" and "Text" to define the layout, visual design, and behavior of the component.
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-menu--menu-story" />
+  <Story id="components-stories-menu--menu-story" />
 </Canvas>
