--- a/example/storybook/src/components/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Slider/index.stories.mdx
@@ -1,9 +1,9 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Slider" />
+<Meta title="components/Slider" />
 
 # Slider
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-slider--slider-story" />
+  <Story id="components-stories-slider--slider-story" />
 </Canvas>
