--- a/example/storybook/src/components/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Spinner/index.stories.mdx
@@ -1,9 +1,9 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Spinner" />
+<Meta title="components/Spinner" />
 
 # Spinner
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-spinner--spinner-story" />
+  <Story id="components-stories-spinner--spinner-story" />
 </Canvas>
