--- a/example/storybook/src/components/Switch/index.stories.mdx
+++ b/example/storybook/src/components/Switch/index.stories.mdx
@@ -1,9 +1,9 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Switch" />
+<Meta title="components/Switch" />
 
 # Switch
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-switch--switch-story" />
+  <Story id="components-stories-switch--switch-story" />
 </Canvas>
