--- a/example/storybook/src/components/TextArea/index.stories.mdx
+++ b/example/storybook/src/components/TextArea/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Text Area" />
+<Meta title="components/Text Area" />
 
 # TextArea
 
@@ -15,5 +15,5 @@ import { Textarea } from '@universa11y/textarea';
 ```
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-textarea--text-area-story" />
+  <Story id="components-stories-textarea--text-area-story" />
 </Canvas>
