--- a/example/storybook/src/components/Tooltip/index.stories.mdx
+++ b/example/storybook/src/components/Tooltip/index.stories.mdx
@@ -1,9 +1,9 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Tooltip" />
+<Meta title="components/Tooltip" />
 
 # Tooltip
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-tooltip--tooltip-story" />
+  <Story id="components-stories-tooltip--tooltip-story" />
 </Canvas>
