--- a/example/storybook/src/components/VStack/index.stories.mdx
+++ b/example/storybook/src/components/VStack/index.stories.mdx
@@ -1,11 +1,11 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Vstack" />
+<Meta title="components/Vstack" />
 
 # VStack
 
 "VStack" component is used to create a vertical stack layout for child components in React Native. In React Native, the VStack component can be generated using a third-party accessibility-focused library that uses "styled views" to define the layout, visual design, and behavior of the component.
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-vstack--v-stack-story" />
+  <Story id="components-stories-vstack--v-stack-story" />
 </Canvas>
