--- a/example/storybook/src/components/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Fab/index.stories.mdx
@@ -1,11 +1,11 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Fab" />
+<Meta title="components/Fab" />
 
 # Fab
 
 A Floating Action Button (FAB) component is used to create a button that appears to float above the interface, usually used to promote the most common action within an application. In React Native, the FAB component can be generated using a Universa11y library that uses "styled views" to define the layout, visual design, and behavior of the component.
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-fab--fab-story" />
+  <Story id="components-stories-fab--fab-story" />
 </Canvas>
