--- a/example/storybook/src/components/Icon/index.stories.mdx
+++ b/example/storybook/src/components/Icon/index.stories.mdx
@@ -1,11 +1,11 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Icon" />
+<Meta title="components/Icon" />
 
 # Icon
 
 "Icon" component is used to create an icon in React Native. In React Native, the Icon component can be generated using a third-party accessibility-focused library that uses "styled views" and "svg" to define the layout, visual design, and behavior of the component.
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-icon--icon-story" />
+  <Story id="components-stories-icon--icon-story" />
 </Canvas>
