--- a/example/storybook/src/components/InputGroup/index.stories.mdx
+++ b/example/storybook/src/components/InputGroup/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Input/InputGroup" />
+<Meta title="components/InputGroup" />
 
 # InputGroup
 
@@ -22,5 +22,5 @@ import { InputGroup } from '@universa11y/input';
 | placeholder | string |         | The placeholder of the input |
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-input--input-group-story" />
+  <Story id="components-stories-input--input-group-story" />
 </Canvas>
