--- a/example/storybook/src/components/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Modal/index.stories.mdx
@@ -1,9 +1,9 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Modal" />
+<Meta title="components/Modal" />
 
 # Modal
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-modal--modal-story" />
+  <Story id="components-stories-modal--modal-story" />
 </Canvas>
