--- a/example/storybook/src/components/Progress/index.stories.mdx
+++ b/example/storybook/src/components/Progress/index.stories.mdx
@@ -1,9 +1,9 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Progress" />
+<Meta title="components/Progress" />
 
 # Progress
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-progress--progress-story" />
+  <Story id="components-stories-progress--progress-story" />
 </Canvas>
