--- a/example/storybook/src/components/Select/index.stories.mdx
+++ b/example/storybook/src/components/Select/index.stories.mdx
@@ -1,9 +1,9 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="recipes/Select" />
+<Meta title="components/Select" />
 
 # Select
 
 <Canvas style={{ height: 200 }}>
-  <Story id="recipes-stories-select--select-story" />
+  <Story id="components-stories-select--select-story" />
 </Canvas>
