fix: update mdx

--- a/example/storybook/src/advanced/Architecture/index.stories.mdx
+++ b/example/storybook/src/advanced/Architecture/index.stories.mdx
@@ -2,7 +2,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="advanced/Architecture" />
 
-# Architecture
+# Architecture Docs
 
 We can even preview multiple Stories in a block. This
 gets rendered as a group but defines individual stories
