--- a/example/storybook/src/components/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/FormControl/index.stories.mdx
@@ -1,11 +1,11 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="components/HStack" />
+<Meta title="components/FormControl" />
 
 # FormControl
 
 "FormControl" component is used to create a container for form elements, like text inputs, checkboxes, and radio buttons. In React Native, the FormControl component can be generated using a third-party accessibility-focused library that uses "styled views" to define the layout, visual design, and behavior of the component.
 
 <Canvas style={{ height: 200 }}>
-  <Story id="components-stories-hstack--h-stack-story" />
+  <Story id="components-stories-formcontrol--form-control-story" />
 </Canvas>
