--- a/example/storybook/src/getting-started/TypeScript/index.stories.mdx
+++ b/example/storybook/src/getting-started/TypeScript/index.stories.mdx
@@ -1,8 +1,8 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="advanced/TypeScript" />
+<Meta title="Getting Started/TypeScript" />
 
-# TypeScript
+# TypeScript (Add Features and Intro)
 
 - To enable TypeScript for aliases and tokens, we’ll follow below steps:
 
