--- a/example/storybook/src/overview/API/index.stories.mdx
+++ b/example/storybook/src/overview/API/index.stories.mdx
@@ -1,8 +1,34 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title="Getting Started/Styled" />
+<Meta title="Overview/API" />
 
-# styled() (Update examples)
+# API (Need to be updated)
+
+## Global API
+
+- Styled
+  - config
+  - propertyResolver
+  - tokens
+  - mediaQueries
+  - Platform
+  - states
+  - colorMode
+- StyledProvider
+  - config
+  - colorMode
+
+## Component Level API
+
+- Sx
+- Utility Props
+
+## Styled API
+
+- config
+- colorMode
+
+## Styled()
 
 - With our **`styled`**function, you can easily extend existing components and make them customizable and themeable.
 - Let’s create a styled component
