--- a/example/storybook/src/overview/Indroduction/index.stories.mdx
+++ b/example/storybook/src/overview/Indroduction/index.stories.mdx
@@ -45,3 +45,42 @@ But, Dank doesn’t use React Native Web’s styling engine (which is highly per
 ## Why we built it when we already have NativeBase?
 
 This library was a part of NativeBase. This isn’t directly comparable with NativeBase. Dank only deals with the styling while NativeBase is a component library with styling, accessiblity and a default theme, all built-in.
+
+## Goals
+
+- Universal CSS-in-JS solution (implementation per platform can differ)
+- Consistent API for developers
+- Solve CSS Specificity
+- TypeScript everything
+- Styling for
+  - Theme / token
+  - Variants
+  - Media Queries
+  - States
+  - Platform based styling
+  - Color Mode
+- Composable (should work with other libraries)
+
+## Non goals
+
+- Don’t solve problems beyond styling!
+- Accessibility (check universa11y.dev)
+- Design (check gluestack-ui)
+- Animation (check examples with Legend-Motion)
+
+## Under consideration (not a roadmap)
+
+- Dank to support other libraries & frameworks — Solid, Svelte, Vue, Astro or Qwik
+- Bundler plugin (instead of the babel-plugin)
+  - To generate separate CSS files
+  - To remove intermediate components when it makes sense
+
+## Gotchas
+
+Though this is internal to the library, it’s great if you know the following:
+
+- Dank generates pure CSS for media-queries
+- media-query color-mode-preferences isn’t supported right now.
+- Dank generates CSS classes & declarations for the rest. It doesn’t use the default CSS’s way of handling pseudo states. For eg, we don’t use CSS pseudo selector like `:hover`, the hover logic is left to the developer to implement in the JS runtime. The primary reason for that is to have a better control of user interactions and handle it with logic whenever needed (like to use Legend-Motion in the hover state).
+
+Dank generates indepedent CSS class declarations for the following in the correct “order of specificity” after “resolving the theme tokens”. - Variants - States (hover, focus, …) - Color Mode
