--- a/example/storybook/src/overview/Indroduction/index.stories.mdx
+++ b/example/storybook/src/overview/Indroduction/index.stories.mdx
@@ -2,7 +2,9 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Overview/Introduction" />
 
-# [dank.style](http://dank.style) - Why?
+# Introduction
+
+Dank is a performant styling library for React and React Native that enables developers to write maintainable and scalable styles in a fast and efficient manner.
 
 ## Why we built dank.style?
 
