--- a/example/storybook/src/getting-started/Styled/index.stories.mdx
+++ b/example/storybook/src/getting-started/Styled/index.stories.mdx
@@ -6,8 +6,20 @@ import { Meta } from '@storybook/addon-docs';
 
 - With our **`styled`**function, you can easily extend existing components and make them customizable and themeable.
 - Let’s create a styled component
-  ```
-  // add style example
+  ```jsx
+  const StyledCard = styled(
+    View,
+    {
+      p: '$3',
+      bg: '$gray50',
+      borderRadius: '$2',
+      _dark: {
+        bg: '$gray800',
+      },
+    },
+    componentConfig,
+    extenedBaseConfig
+  );
   ```
 
 ###
