--- a/example/storybook/src/components/Tabs/index.stories.mdx
+++ b/example/storybook/src/components/Tabs/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="components/Divider" />
+<Meta title="components/Tabs" />
 
 # Divider
 
@@ -17,5 +17,5 @@ There are several third-party libraries available for creating Divider component
 When using a third-party library, the component can be used with props such as `color`, `orientation`, `thickness` to customize the behavior and appearance of the Divider. You can also style the divider using the `style` prop, this prop accepts an object containing the styles of the divider.
 
 <Canvas style={{ height: 200 }}>
-  <Story id="components-stories-divider--divider-story" />
+  <Story id="components-stories-tabs--tabs-story" />
 </Canvas>
