--- a/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
@@ -1,13 +1,16 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="api/ColorMode Based Styles" />
+<Meta title="api/ColorMode Based Styles" />;
+
+import { CodeBlock, AppProvider } from '@gluestack/design-system';
 
 # ColorMode Based Styles
 
 When you are creating a StyledComponent using `dank-style` you can write color mode dependent styles inside the `baseStyle` object and any `variant`. You have to define a key called `colorMode` that takes `light` and `dark` as its keys. In which you can define your styling. Here’s a small code snippet of how you should define your style.
 
-```tsx
-import React from 'react';
+<AppProvider>
+  <CodeBlock
+    code={`import React from 'react';
 import { View } from 'react-native';
 import { styled, StyledProvider } from '@dank-style/react';
 import { config } from './dank.config';
@@ -49,8 +52,9 @@ const StyledComponent = styled(
     },
   },
   {}
-);
-```
+);`}
+  />
+</AppProvider>
 
 ```tsx
 export type COLORMODES = 'dark' | 'light';
