--- a/example/storybook/src/api/DescendantsStyles/index.stories.mdx
+++ b/example/storybook/src/api/DescendantsStyles/index.stories.mdx
@@ -2,14 +2,17 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/Descendants Styles" />
 
+import { CodeBlock, AppProvider } from '@gluestack/design-system';
+
 # Descendants (Context based)
 
 We can define descendants in `baseStyle` object where we can define styles that are passed down to children using context-based styling. This approach allows for the global styling of a component to be managed in a centralized location, rather than having to pass down props.
 
 We can create any key in the descendants object and pass style as a value, to use this we need to specify the created key in the descendantStyle array that is defined in a component config which is passed as third parameter in the styled function.
 
-```jsx
-const StyledButton = styled(
+<AppProvider>
+  <CodeBlock
+    code={`const StyledButton = styled(
   Pressable,
   {
     baseStyle: {
@@ -30,8 +33,9 @@ const StyledButton = styled(
   {
     descendantStyle: ['_text'],
   }
-);
-```
+);`}
+  />
+</AppProvider>
 
 To apply the passed style to a given child we need to specify the key in the ancestor styles array of the component config, while creating the component.
 
